# statrethink_course_in_pymc3

./: pyproject.toml
notebooks/pymc3/: hw_week_1.ipynb  rethink_stats_pymc3_w01.ipynb
