[tool.poetry]
name = "rethinking_2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkl = "^2021.1.1"
jupyter = "^1.0.0"
watermark = "^2.1.0"
daft = "^0.1.0"
arviz = "^0.10.0"
pymc3 = "^3.10.0"
causalgraphicalmodels = "^0.0.4"
isort = "^5.6.4"
black = "^20.8b1"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
